contrast fixes

--- a/css/style.css
+++ b/css/style.css
@@ -938,21 +938,21 @@ input[type="button"].small,
    border-style: solid;
    border-width: 0px;
    border-bottom-width: thin;
-   color: #777777;
+   color: #444444;
 }
 
 #people tr.legend
 {
    font-size: 100%;
    text-align: left;
-   color: #777777;
+   color: #444444;
 }
 
 #people td.legend
 {
    font-size: 100%;
    text-align: left;
-   color: #777777;
+   color: #444444;
    padding-bottom: 0em;
 }
 
